# vibing

./: .gitignore  LICENSE
vibing/: .env.sample  Cargo.toml
vibing/src/: authentication.rs  cli.rs  creds.rs  env.rs  error.rs  lib.rs  main.rs  requests.rs  utils.rs
vibing/src/authentication/: keycloak_auth.rs  request.rs  response.rs
vibing/src/cli/: args.rs  matcher.rs
vibing/src/features/: club.rs
vibing/src/features/club/: club_requests.rs  response.rs
